--- a/ExampleProject/ExampleProject.csproj
+++ b/ExampleProject/ExampleProject.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove="Resources\config.json" />
     <None Remove="Resources\settings.json" />
+    <None Remove="Resources\testdata.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\testdata.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
 
